exercise-3/global/manifests/todo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # Uncomment this if path rewriting is required for Prometheus
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-service
                port:
                  number: 84
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 86
          - path: /latest-image
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 86
